Schriftgröße wieder reduziert kleinerer BugFix für JDK-10